Adds support for amda output_format
